fixing white space at the bottom

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,13 +9,18 @@
     z-index: 1000 !important;
 }
 
-  :host {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0; 
-    background-color: #182f38;
+  // :host {
+  //   display: flex;
+  //   flex-direction: column;
+  //   position: absolute;
+  //   top: 0;
+  //   bottom: 0;
+  //   left: 0;
+  //   right: 0; 
+  //   background-color: #182f38;
+  // }
+
+  app-root {
+    display: block;
+    height: 100%;
   }
