--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -17,6 +17,7 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
+    font-weight: 800;
 }
 
 
@@ -25,9 +26,8 @@ $background-color: #182f38;
 .parent-container {
     font-family: "Netflix Sans", sans-serif;
     background-color: #182f38;
-    // background-color: #0f2027 !important;
-    // height: 100vh;
-    padding-bottom: 5rem;
+    // display: block;
+    // height: 100%;
 }
 
 .instructions-container {
@@ -65,6 +65,7 @@ div#accordionExample {
     margin: 0 auto;
     width: 80vw;
     margin-top: 2rem;
+    padding-bottom: 15rem;
 }
 
 .accordion-item {
